--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-mydatepicker-th",
+  "name": "ngx-mydatepicker-thai",
   "version": "1.0.0",
   "description": "Angular date picker (Thai Year)",
   "keywords": [
@@ -22,6 +22,9 @@
     "ngc": "ngc -p tsconfig.publish.json",
     "bundle": "rollup -c rollup.config.js && uglifyjs npmdist/bundles/ngx-mydatepicker-th.umd.js --compress --mangle --screw-ie8 -o npmdist/bundles/ngx-mydatepicker-th.umd.min.js"
   },
+  "files": [
+    "dist"
+  ],
   "main": "bundles/ngx-mydatepicker.umd.js",
   "typings": "index.d.ts",
   "module": "index.js",
